# project-schedule

./: README.md  README.txt  STATUS_REPORT.md  conftest.py  main.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  review.md  test_streamlit.py
.github/workflows/: ci.yml
data/: example_lecturers.json  lecturers.json  projects.json  sample_feasible.json  sample_infeasible.json  time_slots.json
docs/: data_format.md  scheduling_constraints.md
legacy/: README.md
src/: demo.py  scheduling_4yp.py
src/schedule_app/: __init__.py  cli.py  io_json.py  models.py
src/schedule_app/solver/: __init__.py  api.py  precheck.py  result.py  slice1.py  slice2.py  slice3.py
src/schedule_app/ui_tk/: __init__.py  app.py
src/schedule_app/ui_tk/tabs/: availability_tab.py  constraints_tab.py  entities_tab.py  run_tab.py
src/solver/: __init__.py  api.py  precheck.py  result.py  slice1.py  slice2.py  slice3.py
src/ui_tk/: __init__.py  app.py
src/ui_tk/tabs/: availability_tab.py  constraints_tab.py  entities_tab.py  run_tab.py
tests/: test_io.py  test_precheck.py  test_solver_slice1.py  test_solver_slice2.py  test_solver_slice3.py
tutorials/: README.txt  nurse_scheduling.py  shift_requests_scheduling.py
